  save some CPU cycles.

- Rewrote the FbxExamineAll() function to not make assumptions about the sizes
  of the various ExAllData fields.


filesysbox.library 54.4 (23.6.2023)

- When setting fib_Size/ed_Size clamp file size to (INT32_MAX-1) if the field
  is 32-bit (LONG/ULONG).

- Fixed a memory leak in the ExNext directory scanning implementation (nodes
  are removed from the dirdatalist but not freed) that was already there in
  the 0.730 version of the library.

- Implemented a lock handler process to allow file systems to be unmounted
  even if there are outstanding locks/notifications.

- AmigaOS 3 versions are now compiled with -mregparm enabling the use of
  registers d0/d1 and a0/a1 for parameter passing in internal function
  calls.


filesysbox.library 54.5 (21.7.2023)

- Added the FbxGetUpTime() function to the jumptable.

- Made FbxLockName2Path() return FALSE for any paths containing "." or ".." as
  a file or directory name.

- AmigaOS 3: Added a version compiled for the 68060 CPU.


filesysbox.library 54.6 (3.6.2025)

- AmigaOS 3: Added support for ACTION_CHANGE_FILE_POSITION64,
  ACTION_CHANGE_FILE_SIZE64, ACTION_GET_FILE_POSITION64 and
  ACTION_GET_FILE_SIZE64 packets.

- ACTION_SEEK and ACTION_SET_FILE_SIZE now fail with ERROR_OBJECT_TOO_LARGE if
  the return value is too large to fit into dp_Res1.


filesysbox.library 54.7 (10.6.2025)

- Fixed an infinite recursion bug in the new V54.6 ACTION_SET_FILE_SIZE
  implementation caused by the FbxSetFileSize() function calling itself
  instead of FbxSetFileSize64() as it was supposed to.


filesysbox.library 54.8 (2.2.2026)

- FbxCollectLock() now overwrites fl_Volume with a BPTR to the lockhandler's
  own volume structure instead of leaving it pointing to freed memory.

- Added the new FbxDismount command for cleanly unmounting FUSE file systems.


filesysbox.library 54.9 (d.m.2026)

- Use timer.device GetUpTime() function on AROS.
