@@ -629,6 +629,7 @@ void CopyStringCToBSTR(const char *cstr, BSTR bstr, size_t size);
 struct FileSysStartupMsg *FbxGetFSSM(struct Library *sysbase, struct DeviceNode *devnode);
 BOOL FbxCheckString(struct FbxFS *fs, const char *str);
 size_t FbxStrlen(struct FbxFS *fs, const char *str);
+char *FbxStrskip(struct FbxFS *fs, const char *str, size_t n);
 int FbxStrcmp(struct FbxFS *fs, const char *s1, const char *s2);
 int FbxStrncmp(struct FbxFS *fs, const char *s1, const char *s2, size_t n);
 size_t FbxStrlcpy(struct FbxFS *fs, char *dst, const char *src, size_t dst_size);
@@ -850,7 +851,9 @@ void FbxGetComment(struct FbxFS *fs, const char *fullpath, char *comment, size_t
 LONG utf8_decode_slow(const char **strp);
 LONG utf8_decode_fast(const char **strp);
 size_t utf8_strlen(const char *str);
+char *utf8_strskip(const char *str, size_t n);
 int utf8_stricmp(const char *s1, const char *s2);
+int utf8_strncmp(const char *s1, const char *s2, size_t n);
 int utf8_strnicmp(const char *s1, const char *s2, size_t n);
 size_t utf8_strlcpy(char *dst, const char *src, size_t dst_size);
 size_t utf8_strlcat(char *dst, const char *src, size_t dst_size);
