@@ -197,3 +197,7 @@ filesysbox.library 54.9 (d.m.2026)
 
 - Use timer.device GetUpTime() function on AROS.
 
+- Fixed invalid assumptions in FbxIsParent() and FbxUpdatePaths() that the
+  number of characters is the same as the number of bytes and that lower and
+  upper case letters are always encoded as the same size.
+
